# FinTDA

./: .gitignore  main.py  pyproject.toml
FinTDA/: henon_map.py
src/fintda/: __init__.py  henon_map.py
src/henon_map/: henon_map.py
tests/: test_henon_map.py
