[project]
name = "fintda"
version = "0.1.0"
description = "Basics tools and utilities for financial topological data analysis (TDA)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.4.2",
    "scikit-learn>=1.8.0",
    "scikit-tda>=1.1.1",
    "scipy>=1.17.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel>=0.43.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["FinTDA"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["FinTDA/tests"]